Fix nav in IE7 by hiding maincontent overflow

--- a/www/templates/html/css/general.css
+++ b/www/templates/html/css/general.css
@@ -1,3 +1,6 @@
+#maincontent {
+	overflow:hidden;
+}
 #maincontent div.wdn_notice div.message {
 	background:url(images/information.png) no-repeat top left;
 }
